force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Category__c</fullName>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Tax_Category</valueSetName>
    </valueSet>
</CustomField>