force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Number__c</fullName>
    <label>Tax Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>