force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Title__c.field-meta.xml
<CustomField>
    <fullName>EYI_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mr. and Mrs.</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>