force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Type_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>EYI_Type_Of_Applicant__c</fullName>
    <label>Type Of Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Buyer</fullName>
            </value>
            <value>
                <fullName>Corporate Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>