force-app/main/default/objects/EYI_Applicants__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>EYI_Applicants__c</referenceTo>
    <relationshipLabel>Applicant</relationshipLabel>
    <relationshipName>Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>