force-app/main/default/objects/EYI_Applicants__c/fields/Is_PAN_EKYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_PAN_EKYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PAN EKYC Completed</label>
    <type>Checkbox</type>
</CustomField>