force-app/main/default/objects/EYI_Applicants__c/fields/isKYCDone__c.field-meta.xml
<CustomField>
    <fullName>isKYCDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isKYCDone</label>
    <type>Checkbox</type>
</CustomField>