force-app/main/default/objects/EYI_Applicants__c/fields/Legacy_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Code__c</fullName>
    <inlineHelpText>Legacy Customer code</inlineHelpText>
    <label>Legacy System Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>