force-app/main/default/objects/EYI_Applicants__c/fields/Pan_response__c.field-meta.xml
<CustomField>
    <fullName>Pan_response__c</fullName>
    <label>Pan response</label>
    <type>TextArea</type>
</CustomField>