force-app/main/default/objects/EYI_Applicants__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>EYI_Applicants__c</referenceTo>
    <relationshipLabel>Applicants (Primary Applicant)</relationshipLabel>
    <relationshipName>Primary_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>