force-app/main/default/objects/EYI_Applicants__c/fields/Proceed_Without_Aadhar_KYC__c.field-meta.xml
<CustomField>
    <fullName>Proceed_Without_Aadhar_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceed Without Aadhar KYC</label>
    <type>Checkbox</type>
</CustomField>