force-app/main/default/objects/EYI_Applicants__c/fields/SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Code__c</fullName>
    <label>SAP Customer Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>