force-app/main/default/objects/EYI_Applicants__c/fields/SSR_Data__c.field-meta.xml
<CustomField>
    <fullName>SSR_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSR Data</label>
    <type>Checkbox</type>
</CustomField>