force-app/main/default/objects/EYI_Applicants__c/fields/SubProject__c.field-meta.xml
<CustomField>
    <fullName>SubProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubProject</label>
    <referenceTo>EYI_SubProject__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>