force-app/main/default/objects/EYI_Applicants__c/fields/Verification_Aadhar_process_description__c.field-meta.xml
<CustomField>
    <fullName>Verification_Aadhar_process_description__c</fullName>
    <label>Verification Aadhar process description</label>
    <type>TextArea</type>
</CustomField>