force-app/main/default/objects/EYI_Applicants__c/fields/Verified_AADHAR_Card_Address__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_Address__c</fullName>
    <label>Verified AADHAR Card Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>