force-app/main/default/objects/EYI_Applicants__c/fields/Verified_AADHAR_Card_DOB__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_DOB__c</fullName>
    <label>Verified AADHAR Card DOB</label>
    <type>Date</type>
</CustomField>