force-app/main/default/objects/EYI_Applicants__c/fields/Verified_AADHAR_Card_Gender__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_Gender__c</fullName>
    <label>Verified AADHAR Card Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>