force-app/main/default/objects/EYI_Applicants__c/fields/Verified_AADHAR_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_Name__c</fullName>
    <label>Verified AADHAR Card Name</label>
    <type>TextArea</type>
</CustomField>