force-app/main/default/objects/EYI_Applicants__c/fields/Verified_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>Verified_PAN_Number__c</fullName>
    <label>Verified PAN Number</label>
    <type>TextArea</type>
</CustomField>