force-app/main/default/objects/EYI_Applicants__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>EYI_Aadhar_Number__c</columns>
    <columns>EYI_Pancard_Number__c</columns>
    <columns>E_Sign_Done__c</columns>
    <columns>Is_Aadhar_EKYC_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>